--- a/.env
+++ b/.env
@@ -27,11 +27,20 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_USERNAME=d3f929cfcb9c2b
+MAIL_PASSWORD=4cc49fa963ea76
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=noreply@spaziorevita.com.br
 MAIL_FROM_NAME="${APP_NAME}"
+
+#MAIL_DRIVER=smtp
+#MAIL_HOST=smtp.gmail.com
+#MAIL_PORT=587
+#MAIL_USERNAME=marcelo@studioti.com.br
+#MAIL_PASSWORD=e2q2d5n6
+#MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS=marcelo@studioti.com.br
+#MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
