--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=187.45.196.162
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=revita
-DB_USERNAME=revita
-DB_PASSWORD=E2q2d5n6@
+DB_USERNAME=root
+DB_PASSWORD=e2q2d5n6@
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
