new contact functionality

--- a/.env
+++ b/.env
@@ -37,7 +37,8 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=contatospaziorevita@gmail.com
-MAIL_PASSWORD=sr1220306
+# MAIL_PASSWORD=sr1220306
+MAIL_PASSWORD=aqdaxywglluoebuf
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=contatospaziorevita@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
