--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=154.56.48.154
 DB_PORT=3306
-DB_DATABASE=revita
-DB_USERNAME=root
-DB_PASSWORD=e2q2d5n6@
+DB_DATABASE=u984372186_revita
+DB_USERNAME=u984372186_revita
+DB_PASSWORD=E2q2d5n6@
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
